# todo-list-app

./: Dockerrun.aws.json  README.md  docker-compose.yml
.github/: TODO.md
.github/workflows/: cd.yaml  ci.yaml  lint.yaml  push-aws.yaml  release.yaml
backend/: .dockerignore  .env  Cargo.toml  Dockerfile  Dockerrun.aws.json  README.md  TODO.Md  TODO.md  docker-compose.yml  go.mod  go.sum  main.go  nginx.conf
backend/constants/: variables.go
backend/database/: db.go
backend/handlers/: auth.go  todo.go
backend/models/: response.go  todo.go  user.go
backend/src/: main.rs
backend/src/data/: cache.rs  db.rs  tables.rs
backend/src/database/: cache.rs  db.rs  mod.rs  tables.rs
backend/src/handlers/: auth.rs  profile.rs  todo.rs  user.rs
backend/src/middlewares/: rate_limiter.rs
backend/src/models/: auth.rs  jwt.rs  mod.rs  rate_limiter.rs  response.rs  todo.rs  user.rs
backend/src/routes/: auth.rs  mod.rs  profile.rs  todo.rs  user.rs
backend/src/utils/: bcrypt.rs  encryption.rs  jwt.rs  mod.rs  regex.rs  response.rs
backend/tests/: auth.go  test_database.rs  test_todo.rs  test_user.rs  todo.go  todo_integration_test.go
backend/utils/: jwt.go  response.go
config/: Dockerfile
config/nginx/: nginx.conf
frontend/: Dockerfile  Dockerfile.dev  Dockerrun.aws.json  TODO.md  docker-compose.yml  nginx.conf  package-lock.json  package.json  vitest.config.ts
frontend/src/: App.tsx  main.tsx
infra/: skaffold.yaml
infra/k8s/: backend-deployment.yaml  frontend-deployment.yaml  frontend-pod.yaml
mobile/: TODO.md  pubspec.yaml
mobile-2/: .gitignore  app.json  package-lock.json  package.json
mobile/lib/: main.dart  (+1 more)
react-native-todo-app/: app.json  package.json
src/: App.tsx
web/: Dockerfile  docker-compose.yml  package-lock.json  package.json
(+307 files in other folders)
