[package]
name = "todos_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
dotenvy = "0.15.7"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
sqlx = { version = "0.8.3", features = ["postgres", "runtime-tokio", "uuid", "chrono"] }
tokio = { version = "1.43.0", features = ["full"] }
tower-http = { version = "0.6.2", features = ["cors", "trace"] }
uuid = { version = "1.13.1", features = ["v4", "serde"] }
