[package]
name = "todos_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.7.0"
actix-web = "4.9.0"
bcrypt = "0.17.0"
chrono = "0.4.39"
deadpool-redis = { version = "0.19.0", features = ["rt_tokio_1"] }
dotenvy = "0.15.7"
fern = "0.7.1"
jsonwebtoken = "9.3.1"
log = "0.4.26"
once_cell = "1.20.3"
openssl = { version = "0.10.70", features = ["vendored"] }
regex = "1.11.1"
reqwest = { version = "0.12.12", features = ["json"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
tokio = { version = "1.43.0", features = ["full"] }
tokio-postgres = { version = "0.7.13", features = ["with-uuid-1"] }
tower-http = { version = "0.6.2", features = ["cors", "trace"] }
uuid = { version = "1.13.1", features = ["v4", "serde"] }
